Fix image overflowing into card below on MS Edge

--- a/src/components/ProjectsCardsList/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectsCardsList/ProjectCard/ProjectCard.module.css
@@ -42,6 +42,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 12px;
+    overflow: auto;
 }
 
 .projectCard > h3 {
